Fixed noscroll on mobile devices
overflow:hidden on my viewport was preventing scrolling on mobile
devices. I had to set it to auto, but that is problematic on big
displays, since the bars are no longer centered...

--- a/drag-and-scroll/style.css
+++ b/drag-and-scroll/style.css
@@ -9,10 +9,10 @@
 		}
 	
 		#viewport {
-			position: fixed;	/* to enable further positioned divs inside content area */
+			position: relative;	/* to enable further positioned divs inside content area */
 			background: lightgray;
 			width: 100%; height: 100%;
-			overflow: hidden;
+			overflow: auto;
 		}
 		
 		#base {
